# CSE274-Project

./: ARCHITECTURE.md  ImplementationPlan.md  README.md
.Jules/: palette.md
Docs/: API_REFERENCE.md  ARCHITECTURE.md  ML_PIPELINE.md  ManualSetupChecklist.md  PRD.md  TechStack.md  UIUX.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: inference.py  schemas.py
backend/app/routes/: predict.py
backend/ml/: generate_data.py  train.py
backend/ml/artifacts/: classifier_model.pkl  clusterer_model.pkl  preprocessing_pipeline.pkl  regressor_model.pkl  training_metrics.json
backend/ml/data/: biometric_data.csv
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnimatedNumber.tsx  BentoCard.tsx  ClusterArchetype.tsx  EnergyForecast.tsx  ReadinessOracle.tsx  TelemetryInput.tsx
frontend/lib/: api.ts
