[project]
name = "biosync-backend"
version = "0.1.0"
description = "BioSync ML Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.34.0",
    "scikit-learn>=1.8.0",
    "xgboost>=2.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.1",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.4.0",
    "pydantic>=2.0.0",
]
